test/spec_vectors/simd_i64x2_extmul_i32x4/fail/module_1.wat
(module (func (result v128) (i64x2.extmul_low_i32x4_s (i32.const 0) (f32.const 0.0))))